# alpaca-core-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  README.md  Rakefile  ac-local-config-export.in.cmake  alpaca-core-sdk-config-export.in.cmake  alpaca-core-sdk-config-version.in.cmake  get-ac-local-cmake-lib.cmake  root-setup.cmake  third-party.md
acord/asset-mgr/code/: CMakeLists.txt
api/code/: CMakeLists.txt
api/code/ac/: ApiCUtil.hpp  Callback.hpp  CallbackResult.hpp  Callbacks.hpp  Dict.hpp  DictCUtil.hpp  Error.hpp  Frame.hpp  Instance.hpp  InstancePtr.hpp  Model.hpp  ModelPtr.hpp  Provider.hpp  Session.cpp  Session.hpp  SessionExecutorPtr.hpp  SessionHandler.cpp  SessionHandler.hpp  SessionHandlerPtr.hpp  VtableExports.cpp  api-c.cpp  api.h  api_provider.h  c-api.cpp  dict-c.cpp  dict.h  dict_ref.h  dict_root.h  export.h  model.h
asset-mgr/code/: CMakeLists.txt
common/: CMakeLists.txt  README.md
common/ac-audio/: CMakeLists.txt
common/ac-audio/code/: ac-audio.cpp  ac-audio.hpp
common/ac-audio/test/: CMakeLists.txt  t-integration.cpp
common/ac-model-schema/: CMakeLists.txt
common/ac-model-schema/test/: CMakeLists.txt  test-ac-model-schema-no-generate.cpp
common/ac-model-schema/tests/: CMakeLists.txt  test-ac-model-schema-no-generate.cpp  test-ac-model-schema.cpp
common/ac-repo-root/: CMakeLists.txt  README.md  ac-repo-root.in.h
common/ac-test-assets/: CMakeLists.txt
common/ac-test-assets/test-assets/: assets.h
common/ac-test-util/: CMakeLists.txt  README.md
common/ac-test-util/ac-test-util/: JalogFixture.inl  unity.h
common/ahttp/: CMakeLists.txt
common/ahttp/test/: CMakeLists.txt  t-ahttp-sync.cpp  t-ahttp.cpp  t-sync_generator.cpp
common/astl/: CMakeLists.txt  README.md
common/astl/include/: CMakeLists.txt
common/astl/private/: CMakeLists.txt
common/astl/public/: CMakeLists.txt
common/astl/test/: CMakeLists.txt  t-coro_lock.cpp  t-cow.cpp  t-id_ptr.cpp  t-mem_ext.cpp  t-move-bf.cpp  t-move.cpp  t-move_capture.cpp  t-multi_thread_runner.cpp  t-safe_func.cpp  t-sc_queue.cpp  t-sv.c  t-sv.cpp  t-sv.h  t-throw_ex.cpp  t-transparent.cpp  t-tuple_util.cpp  t-u8c.cpp
common/doc-util/: Doxyfile.common  doxygen-xml.rb  fixygen.css  fixygen.rb
common/doctest-unity/: CMakeLists.txt  README.md  doctest-unity-main.cpp
common/file-download/: CMakeLists.txt  README.md
common/file-download/test/: CMakeLists.txt  t-file-download.cpp
common/imgui/: CMakeLists.txt  README.md
common/io/: CMakeLists.txt
common/io/code/: CMakeLists.txt
common/io/test/: CMakeLists.txt  t-blocking_io.cpp  t-broadcast.cpp  t-buffered_channel.cpp  t-channel_stream.cpp  t-status.cpp  t-sync-io.cpp  t-sync_io.cpp  t-xio.cpp
common/jalog/: CMakeLists.txt  README.md
common/jalog/code/: CMakeLists.txt
common/jalog/example/: CMakeLists.txt  e-HelloWorld.cpp  e-PrintfStyleLogging.cpp  e-StreamStyleLogging.cpp
common/jalog/test/: CMakeLists.txt  TestSink.hpp  t-defaults.cpp  t-mt.cpp  t-qwrite.cpp
common/jalogc/: CMakeLists.txt  README.md
common/jalogc/code/: jalogc.h
common/jalogc/test/: CMakeLists.txt  t-logging.c  t-more-logging.cpp
common/rpc/code/: CMakeLists.txt
common/rpc/test/: CMakeLists.txt
common/schema/: CMakeLists.txt
common/schema/test/: CMakeLists.txt  t-SchemaEnum.cpp  t-SchemaItem.cpp
common/xec/: CMakeLists.txt
common/xec-coro/: CMakeLists.txt
common/xec-coro/example/: CMakeLists.txt  e-xec-coro.cpp
common/xec/code/: CMakeLists.txt
common/xec/test/: CMakeLists.txt  t-coro-mt.cpp  t-coro-stack.cpp  t-coro.cpp  t-generator.cpp  t-multi_thread_runner.cpp  t-thread_runner.cpp
common/xxhash-cpp/: README.md
common/xxhash-cpp/code/: CMakeLists.txt
common/xxhash-cpp/test/: CMakeLists.txt  t-xxhash.cpp
dict/code/: CMakeLists.txt
dict/code/ac/: Dict.hpp
dummy-plugin/code/: CMakeLists.txt  add-dummy-to-ac-local.cpp  add-dummy-to-ac-local.h  dummy-ac-local-interface.cpp  dummy-ac-local-interface.hpp
dummy-plugin/lib/: CMakeLists.txt
dummy-plugin/plib/: CMakeLists.txt
frame/code/: .gitignore  CMakeLists.txt  version.in.h
frame/code/ac/: DictFwd.hpp  Frame.hpp  FrameUtil.hpp  Session.cpp  Session.hpp  SessionHandler.cpp  SessionHandler.hpp  export.h
inference/: CMakeLists.txt
inference/dummy/: CMakeLists.txt  README.md
inference/dummy/code/: CMakeLists.txt
inference/dummy/example/: CMakeLists.txt  e-basic.cpp
inference/dummy/local/: CMakeLists.txt
inference/dummy/test/: CMakeLists.txt  t-Instance.cpp  t-Model.cpp
inference/dummy/test-models/: ac-test-data-dummy-models.h
inference/llama.cpp/: CMakeLists.txt  README.md
inference/llama.cpp/code/: CMakeLists.txt
inference/llama.cpp/example/: CMakeLists.txt  e-basic.cpp  e-gui.cpp
inference/llama.cpp/local/: CMakeLists.txt
inference/llama.cpp/test/: CMakeLists.txt  t-Antiprompt.cpp  t-ChatFormat.cpp  t-ChatTemplate.cpp  (+2 more)
inference/whisper/: CMakeLists.txt
local-provider/code/: CMakeLists.txt
local-provider/test/: CMakeLists.txt  TestBinaryAssets.hpp  t-AssetManager.cpp  t-AssetSourceLocalDir.cpp  t-AssetSourceLocalFiles.cpp  t-Consts.hpp  t-FsUtil.cpp  t-dummy-local-provider.cpp  t-dummy-local-provider.hpp  t-inference-provider.cpp  t-local-provider.c  t-local-provider.cpp  t-wrapper-dummy-provider.cpp  t-wrapper.c  tl-dummy-local-provider.cpp  tl-dummy-local-provider.h  tl-dummy-local-provider.hpp
local/code/: .gitignore  CMakeLists.txt  version.in.h
local/schema/: CMakeLists.txt
local/test/: CMakeLists.txt  t-FileUri.cpp  t-FsUtil.cpp  t-ModelFactory.cpp  t-ModelLoaderRegistry.cpp  t-ModelSchema.cpp  t-ProgressCb.cpp  t-ProviderRegistry.cpp  t-resource-manager.cpp  test-assets.in.h
schema/code/: CMakeLists.txt  generate-cpp-for-ac-model-schema.rb
wrapper/: CMakeLists.txt
wrapper/c/: CMakeLists.txt  Doxyfile.c-api  README.md
wrapper/cocoa/: CMakeLists.txt  README.md
wrapper/java/: .gitignore  CMakeLists.txt  Doxyfile.java-api  README.md  build.gradle  settings.gradle
wrapper/python/: CMakeLists.txt  README.md
wrapper/swift/: CMakeLists.txt  README.md
(+820 files in other folders)
